--- a/themesConfig.json
+++ b/themesConfig.json
@@ -2,6 +2,25 @@
   "themes": {
     "items": [
       {
+        "url": "https://qgisweb.oslandia.net/qgis/demo_project",
+        "attribution": "Oslandia",
+        "attributionUrl": "https://oslandia.com/",
+        "format": "image/png; mode=8bit",
+        "default": true,
+        "scales": [500000, 200000, 80000, 40000, 20000, 10000, 8000, 6000, 4000, 2000, 1000, 500, 250, 100],
+        "backgroundLayers": [
+          {
+            "name": "mapnik",
+            "printLayer": "osm_farbig",
+            "visibility": true
+          }
+        ],
+        "searchProviders": ["coordinates"],
+        "mapCrs": "EPSG:3857",
+        "additionalMouseCrs": ["EPSG:2154"],
+        "collapseLayerGroupsBelowLevel": 1
+      },
+      {
         "url": "http://qwc2.sourcepole.ch/wms/uster/bauprojekte",
         "attribution": "Stadt Uster",
         "attributionUrl": "https://gis.uster.ch/",
